<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true">

    <View
        android:id="@+id/colorGradientFirst"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/colorGradientSecond"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="0.5"/>

    <View
        android:id="@+id/colorGradientSecond"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorGradientFirst"
        app:layout_constraintVertical_weight="0.5"/>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.github.vkay94.dtpv.DoubleTapPlayerView
            android:id="@+id/playerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/md_black_1000"
            android:keepScreenOn="true"
            app:controller_layout_id="@layout/video_player_content"
            app:dtpv_controller="@id/ytOverlay"
            app:show_buffering="always" />

        <com.github.vkay94.dtpv.youtube.YouTubeOverlay
            android:id="@+id/ytOverlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="#77000000"
            android:visibility="invisible"
            app:yt_playerView="@id/playerView"/>

    </FrameLayout>

    <ImageButton
        android:id="@+id/lockButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="?attr/roundSelector"
        android:contentDescription="@string/lock"
        android:src="@drawable/ic_round_lock_open"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/brightnessIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/colorGradientSecond"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:drawableLeft="@drawable/ic_round_brightness_medium"
        android:text="@string/bright"
        tools:ignore="RtlHardcoded"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="#42000000"
        android:visibility="gone"/>

    <Button
        android:id="@+id/volumeIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/colorGradientSecond"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:drawableLeft="@drawable/ic_round_volume_up"
        android:text="@string/volume"
        tools:ignore="RtlHardcoded"
        android:textSize="16sp"
        android:textColor="@color/md_white_1000"
        android:textStyle="bold"
        android:background="#42000000"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>